--- a/OnlineApp/Views/Shared/_Layout.cshtml
+++ b/OnlineApp/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/OnlineApp.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.css" />
 </head>
 <body>
     <header>
@@ -36,6 +37,10 @@
     </header>
     <div class="container">
         <main role="main" class="pb-3">
+
+            @* Show TempData notifications here from the Controller *@
+            <partial name="_Notification" />
+
             @RenderBody()
         </main>
     </div>
