--- a/OnlineApp/Views/Category/Delete.cshtml
+++ b/OnlineApp/Views/Category/Delete.cshtml
@@ -1,34 +1,49 @@
 ﻿@model Category
 
-<form method="post">
-    @* Must Keep this line if we use anything other than name = (Id) as PK, its safe to keep this line *@
-    <input asp-for="Id" hidden />
-    <div class="border p-3 mtg-4">
-        <div class="row pb-2">
-            <h2 class="text-warning">
-                Delete Catetgory
-            </h2>
-            <hr />
-        </div>
-        @* <div asp-validation-summary="ModelOnly"></div> *@
-        <div class="mb-3 row p-1">
-            <label asp-for="Name" class="p-0"></label>
-            <input asp-for="Name" class="form-control" />
-        </div>
-        <div class="mb-3 row p-1">
-            <label asp-for="DisplayOrder" class="p-0"></label>
-            <input asp-for="DisplayOrder" class="form-control" />
-        </div>
+
+<div class="card shadow border-0 mt-4">
+    <div class="card-header bg-secondary bg-gradient m-lg-0 py-3">
         <div class="row">
-            <div class="col-6 col-md-3">
-                <button type="submit" class="btn btn-danger form-control">Delete Record</button>
-            </div>
-            <div class="col-6 col-md-3">
-                <a asp-controller="Category" asp-action="Index" class="btn btn-outline-secondary border form-control">Back to List</a>
+            <div class="col-12 text-center">
+                <h2 class="text-warning py-2">Delete Category</h2>
             </div>
         </div>
     </div>
-</form>
+    <div class="card-body p-4">
+
+        <form method="post">
+            @* Must Keep this line if we use anything other than name = (Id) as PK, its safe to keep this line *@
+            <input asp-for="Id" hidden />
+            <div class="border p-3 mtg-4">
+                @* <div class="row pb-2">
+                    <h2 class="text-warning">
+                        Delete Catetgory
+                    </h2>
+                    <hr />
+                </div> *@
+                @* <div asp-validation-summary="ModelOnly"></div> *@
+                <div class="mb-3 row p-1">
+                    <label asp-for="Name" class="p-0"></label>
+                    <input asp-for="Name" class="form-control" />
+                </div>
+                <div class="mb-3 row p-1">
+                    <label asp-for="DisplayOrder" class="p-0"></label>
+                    <input asp-for="DisplayOrder" class="form-control" />
+                </div>
+                <div class="row">
+                    <div class="col-6 col-md-3">
+                        <button type="submit" class="btn btn-danger form-control">Delete Record</button>
+                    </div>
+                    <div class="col-6 col-md-3">
+                        <a asp-controller="Category" asp-action="Index" class="btn btn-outline-secondary border form-control">Back to List</a>
+                    </div>
+                </div>
+            </div>
+        </form>
+
+    </div>
+</div>
+
 
 @section Scripts {
     @{
