--- a/OnlineApp/Views/Category/Index.cshtml
+++ b/OnlineApp/Views/Category/Index.cshtml
@@ -1,53 +1,61 @@
 ﻿@model List<Category>
 
 
-<div class="container">
-    <div class="row pt-4 pb-3">
-        <div class="col-6">
-            <h2 class="text-light">Category List</h2>
-        </div>
-        <div class="col-6 text-end">
-            <a asp-controller="Category" asp-action="Create" class="btn btn-primary">
-                <i class="bi bi-plus-square"></i> <span>Create New Category</span>
-            </a>
+<div class="card shadow border-0 mt-4">
+    <div class="card-header bg-secondary bg-gradient m-lg-0 py-3">
+        <div class="row">
+            <div class="col-12 text-center">
+                <h2 class="text-white py-2">Category List</h2>
+            </div>
         </div>
     </div>
-    <table class="table table-bordered table-striped table-hover">
+    <div class="card-body p-4">
+        <div class="row pb-3">
+            <div class="col-6">
+            @* <h2 class="text-light">Category List</h2> *@
+            </div>
+            <div class="col-6 text-end">
+                <a asp-controller="Category" asp-action="Create" class="btn btn-primary">
+                    <i class="bi bi-plus-square"></i> <span>Create New Category</span>
+                </a>
+            </div>
+        </div>
+        <table class="table table-bordered table-striped table-hover">
 
-        <thead class="table-light text-center">
-            <tr>
-                <th>
-                    Category Name
-                </th>
-                <th>
-                    Display Order
-                </th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in Model.OrderBy(u=>u.DisplayOrder))
-            {
+            <thead class="table-light text-center">
                 <tr>
-                    <td>
-                        @item.Name
-                    </td>
-                    <td>
-                        @item.DisplayOrder
-                    </td>
-                    <td>
-                        <div class="w-75 btn-group" role="group">
-                            <a asp-controller="Category" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-primary mx-2">
-                                <i class="bi bi-pencil-square"></i> Edit
-                            </a>
-                            <a asp-controller="Category" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger mx-2">
-                                <i class="bi bi-trash3-fill"></i> Delete
-                            </a>
-                        </div>
-                    </td>
+                    <th>
+                        Category Name
+                    </th>
+                    <th>
+                        Display Order
+                    </th>
                 </tr>
-            }
-        </tbody>
+            </thead>
+            <tbody>
+                @foreach (var item in Model.OrderBy(u => u.DisplayOrder))
+                {
+                    <tr>
+                        <td>
+                            @item.Name
+                        </td>
+                        <td>
+                            @item.DisplayOrder
+                        </td>
+                        <td>
+                            <div class="w-75 btn-group" role="group">
+                                <a asp-controller="Category" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-primary mx-2">
+                                    <i class="bi bi-pencil-square"></i> Edit
+                                </a>
+                                <a asp-controller="Category" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger mx-2">
+                                    <i class="bi bi-trash3-fill"></i> Delete
+                                </a>
+                            </div>
+                        </td>
+                    </tr>
+                }
+            </tbody>
 
-    </table>
-
+        </table>
+    </div>
 </div>
