Unit Of Work concept and related changes done. Also 1st Area Admin folder created, other area and logic to follow.

--- a/OnlineApp/Views/Category/Edit.cshtml
+++ b/OnlineApp/Views/Category/Edit.cshtml
@@ -1,6 +1,11 @@
 ﻿@model Category
 
 
+@{
+    ViewData["Title"] = "Edit Category";
+}
+
+
 <div class="card shadow border-0 mt-4">
     <div class="card-header bg-secondary bg-gradient m-lg-0 py-3">
         <div class="row">
