--- a/OnlineApp/Views/Category/Create.cshtml
+++ b/OnlineApp/Views/Category/Create.cshtml
@@ -1,5 +1,9 @@
 ﻿@model Category
 
+@{
+    ViewData["Title"] = "Create Category";
+}
+
 <div class="card shadow border-0 mt-4">
     <div class="card-header bg-secondary bg-gradient m-lg-0 py-3">
         <div class="row">
