--- a/OnlineApp/Views/Category/Delete.cshtml
+++ b/OnlineApp/Views/Category/Delete.cshtml
@@ -1,6 +1,10 @@
 ﻿@model Category
 
 
+@{
+    ViewData["Title"] = "Delete Category";
+}
+
 <div class="card shadow border-0 mt-4">
     <div class="card-header bg-secondary bg-gradient m-lg-0 py-3">
         <div class="row">
