--- a/OnlineApp/Views/Category/Index.cshtml
+++ b/OnlineApp/Views/Category/Index.cshtml
@@ -1,6 +1,11 @@
 ﻿@model List<Category>
 
 
+@{
+    ViewData["Title"] = "Category List";
+}
+
+
 <div class="card shadow border-0 mt-4">
     <div class="card-header bg-secondary bg-gradient m-lg-0 py-3">
         <div class="row">
