--- a/OnlineApp/Areas/Admin/Views/Category/Create.cshtml
+++ b/OnlineApp/Areas/Admin/Views/Category/Create.cshtml
@@ -34,10 +34,10 @@
                     <span asp-validation-for="DisplayOrder" class="text-danger"></span>
                 </div>
                 <div class="row">
-                    <div class="col-6 col-md-3">
+                    <div class="col-6 ">
                         <button type="submit" class="btn btn-primary form-control">Create</button>
                     </div>
-                    <div class="col-6 col-md-3">
+                    <div class="col-6 ">
                         <a asp-controller="Category" asp-action="Index" class="btn btn-outline-secondary border form-control">Back to List</a>
                     </div>
                 </div>
