--- a/OnlineApp/Areas/Admin/Views/Category/Delete.cshtml
+++ b/OnlineApp/Areas/Admin/Views/Category/Delete.cshtml
@@ -28,17 +28,17 @@
                 @* <div asp-validation-summary="ModelOnly"></div> *@
                 <div class="mb-3 row p-1">
                     <label asp-for="Name" class="p-0"></label>
-                    <input asp-for="Name" class="form-control" />
+                    <input asp-for="Name" class="form-control" disabled />
                 </div>
                 <div class="mb-3 row p-1">
                     <label asp-for="DisplayOrder" class="p-0"></label>
-                    <input asp-for="DisplayOrder" class="form-control" />
+                    <input asp-for="DisplayOrder" class="form-control" disabled />
                 </div>
                 <div class="row">
-                    <div class="col-6 col-md-3">
+                    <div class="col-6 ">
                         <button type="submit" class="btn btn-danger form-control">Delete Record</button>
                     </div>
-                    <div class="col-6 col-md-3">
+                    <div class="col-6 ">
                         <a asp-controller="Category" asp-action="Index" class="btn btn-outline-secondary border form-control">Back to List</a>
                     </div>
                 </div>
