--- a/OnlineApp/Areas/Admin/Views/_ViewImports.cshtml
+++ b/OnlineApp/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using OnlineApp
 @using OnlineApp.Models
+@using OnlineApp.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
