Adding Authorization in the Project

--- a/OnlineApp/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/OnlineApp/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,4 +1,8 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using OnlineApp.Areas.Identity
 @using OnlineApp.Areas.Identity.Pages
+@using OnlineApp
+@using OnlineApp.Models
+@using OnlineApp.Models.ViewModels
+@using OnlineApp.Utility
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
