--- a/OnlineApp/Areas/Admin/Views/_ViewImports.cshtml
+++ b/OnlineApp/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using OnlineApp
 @using OnlineApp.Models
 @using OnlineApp.Models.ViewModels
+@using OnlineApp.Utility
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
