--- a/OnlineApp/Areas/Admin/Views/Company/Delete.cshtml
+++ b/OnlineApp/Areas/Admin/Views/Company/Delete.cshtml
@@ -1,7 +1,7 @@
-﻿@model Company
+﻿@model Product
 
 @{
-    ViewData["Title"] = "Delete Company";
+    ViewData["Title"] = "Delete Product";
 }
 
 
@@ -9,7 +9,7 @@
     <div class="card-header bg-secondary bg-gradient m-lg-0 py-3">
         <div class="row">
             <div class="col-12 text-center">
-                <h2 class="text-warning py-2">Delete Company</h2>
+                <h2 class="text-warning py-2">Delete Product</h2>
             </div>
         </div>
     </div>
@@ -29,34 +29,45 @@
 
                 <div class="mb-3 row p-1">
                     <div class="col-6">
-                        <label asp-for="Name" class="p-0"></label>
-                        <input asp-for="Name" class="form-control" disabled />
+                        <label asp-for="Title" class="p-0"></label>
+                        <input asp-for="Title" class="form-control" disabled />
                     </div>
                     <div class="col-6">
-                        <label asp-for="StreetAddress" class="p-0"></label>
-                        <input asp-for="StreetAddress" class="form-control" disabled />
-                    </div>
-                </div>
-
-                <div class="mb-3 row p-1">
-                    <div class="col-6">
-                        <label asp-for="City" class="p-0"></label>
-                        <input asp-for="City" class="form-control" disabled />
-                    </div>
-                    <div class="col-6">
-                        <label asp-for="State" class="p-0"></label>
-                        <input asp-for="State" class="form-control" disabled />
+                        <label asp-for="Description" class="p-0"></label>
+                        <input asp-for="Description" class="form-control" disabled />
                     </div>
                 </div>
 
                 <div class="mb-3 row p-1">
                     <div class="col-6">
-                        <label asp-for="PostalCode" class="p-0"></label>
-                        <input asp-for="PostalCode" class="form-control" disabled />
+                        <label asp-for="ISBN" class="p-0"></label>
+                        <input asp-for="ISBN" class="form-control" disabled />
                     </div>
                     <div class="col-6">
-                        <label asp-for="PhoneNumber" class="p-0"></label>
-                        <input asp-for="PhoneNumber" class="form-control" disabled />
+                        <label asp-for="Author" class="p-0"></label>
+                        <input asp-for="Author" class="form-control" disabled />
+                    </div>
+                </div>
+
+                <div class="mb-3 row p-1">
+                    <div class="col-6">
+                        <label asp-for="ListPrice" class="p-0"></label>
+                        <input asp-for="ListPrice" class="form-control" disabled />
+                    </div>
+                    <div class="col-6">
+                        <label asp-for="Price" class="p-0"></label>
+                        <input asp-for="Price" class="form-control" disabled />
+                    </div>
+                </div>
+
+                <div class="mb-3 row p-1">
+                    <div class="col-6">
+                        <label asp-for="Price50" class="p-0"></label>
+                        <input asp-for="Price50" class="form-control" disabled />
+                    </div>
+                    <div class="col-6">
+                        <label asp-for="Price100" class="p-0"></label>
+                        <input asp-for="Price100" class="form-control" disabled />
                     </div>
                 </div>
 
@@ -65,7 +76,7 @@
                         <button type="submit" class="btn btn-danger form-control">Delete Record</button>
                     </div>
                     <div class="col-6">
-                        <a asp-controller="Company" asp-action="Index" class="btn btn-outline-secondary border form-control">Back to List</a>
+                        <a asp-controller="Product" asp-action="Index" class="btn btn-outline-secondary border form-control">Back to List</a>
                     </div>
                 </div>
 
