--- a/OnlineApp/Views/Shared/_Layout.cshtml
+++ b/OnlineApp/Views/Shared/_Layout.cshtml
@@ -43,6 +43,10 @@
                                         <a class="dropdown-item" asp-area="Admin" asp-controller="Product" asp-action="Index">Product List</a>
                                     </li>
                                     <li><hr class="dropdown-divider"></li>
+                                    <li class="nav-item">
+                                        <a class="dropdown-item" asp-area="Admin" asp-controller="Company" asp-action="Index">Company List</a>
+                                    </li>
+                                    <li><hr class="dropdown-divider"></li>
                                 </ul>
                             </li>
                         }
