--- a/OnlineApp/Areas/Customer/Views/Home/Details.cshtml
+++ b/OnlineApp/Areas/Customer/Views/Home/Details.cshtml
@@ -1,16 +1,17 @@
-﻿@model Product
+﻿@model ShoppingCart
 
 @{
     ViewData["Title"] = "Details Page";
 }
 
 <form method="post">
+    <input asp-for="ProductId" hidden/>
     <div class="card shadow border-0 mt-4">
         <div class="card-header bg-secondary bg-dark text-light border border-3 box-shadow rounded-1 py-4">
             <div class="row">
                 <div class="col-12 text-center">
-                    <h3 class="text-white text-uppercase">@Model.Title</h3>
-                    <p class="text-white-50 fw-semibold mb-0">by @Model.Author</p>
+                    <h3 class="text-white text-uppercase">@Model.Product.Title</h3>
+                    <p class="text-white-50 fw-semibold mb-0">by @Model.Product.Author</p>
                 </div>
             </div>
         </div>
@@ -25,21 +26,21 @@
                 </div>
                 <div class="row">
                     <div class="col-12 col-lg-3 offset-lg-1 text-center mb-3">
-                        <img src="@Model.ImageUrl" width="100%" class="rounded" />
+                        <img src="@Model.Product.ImageUrl" width="100%" class="rounded" />
                     </div>
                     <div class="col-12 col-lg-6 offset-lg-1">
 
                         <div class="col-12 col-md-6 pb-4">
-                            <span class="badge text-bg-warning text-dark">@Model.Category.Name</span>
+                            <span class="badge text-bg-warning text-dark">@Model.Product.Category.Name</span>
                         </div>
                         <div class="row ps-2">
-                            <h6 class="text-info text-opacity-50 ">ISBN : @Model.ISBN</h6>
+                            <h6 class="text-info text-opacity-50 ">ISBN : @Model.Product.ISBN</h6>
                         </div>
                         <div class="row ps-2">
                             <h6 class="text-info text-opacity-50  pb-2">
                                 List Price:
                                 <span class="text-decoration-line-through">
-                                    @Model.ListPrice.ToString("c")
+                                    @Model.Product.ListPrice.ToString("c")
                                 </span>
                             </h6>
                         </div>
@@ -62,17 +63,17 @@
                                 <div>Price</div>
                             </div>
                             <div class="p-1 col-3 col-lg-2 bg-dark text-warning fw-bold">
-                                <div>@Model.ListPrice.ToString("c")</div>
+                                <div>@Model.Product.ListPrice.ToString("c")</div>
                             </div>
                             <div class="p-1 col-3 col-lg-2 bg-dark text-warning fw-bold">
-                                <div>@Model.Price50.ToString("c")</div>
+                                <div>@Model.Product.Price50.ToString("c")</div>
                             </div>
                             <div class="p-1 col-3 col-lg-2 bg-dark text-warning fw-bold">
-                                <div>@Model.Price100.ToString("c")</div>
+                                <div>@Model.Product.Price100.ToString("c")</div>
                             </div>
                         </div>
                         <div class="row pl-2 my-3">
-                            <p class="text-secondary lh-sm">@Model.Description</p>
+                            <p class="text-secondary lh-sm">@Model.Product.Description</p>
                         </div>
                         <div class="row pl-2 mb-3">
                             <div class="col-md-4">
@@ -81,7 +82,7 @@
                                           id="inputGroup-sizing-default">
                                         Count
                                     </span>
-                                    <input type="number" value="1" class="form-control text-end"
+                                    <input asp-for="Count" type="number" value="1" class="form-control text-end"
                                            aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" />
 
                                 </div>
@@ -89,9 +90,9 @@
                         </div>
                         <div class="row">
                             <div class="col-12 col-md-6 pb-1">
-                                <button type="submit" disabled
+                                <button type="submit"
                                         class="btn btn-primary bg-gradient  w-100 py-2 text-uppercase fw-semibold">
-                                    Add to Cart (Comming Soon...)
+                                    Add to Cart
                                 </button>
                             </div>
                         </div>
