--- a/OnlineApp/Views/Shared/_Layout.cshtml
+++ b/OnlineApp/Views/Shared/_Layout.cshtml
@@ -28,8 +28,8 @@
                             <a class="nav-link" asp-area="Customer" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
 
-                        @if (User.IsInRole(SD.Role_Admin))
-                        {
+                        @* @if (User.IsInRole(SD.Role_Admin))
+                        { *@
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                     Content Management
@@ -49,8 +49,14 @@
                                     <li><hr class="dropdown-divider"></li>
                                 </ul>
                             </li>
-                        }
+                        @* } *@
 
+
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="Customer" asp-controller="Cart" asp-action="Index">
+                                <i class="bi bi-cart"></i> &nbsp;(0)
+                            </a>
+                        </li>
 
                     </ul>
                     <partial name="_LoginPartial"/>
