--- a/OnlineApp/Areas/Customer/Views/Cart/Summary.cshtml
+++ b/OnlineApp/Areas/Customer/Views/Cart/Summary.cshtml
@@ -1,4 +1,6 @@
-﻿
+﻿@model ShoppingCartVM
+
+
 <form method="post">
 	<br />
 	<div class="container">
@@ -8,11 +10,11 @@
 				<div class="row px-4">
 					<div class="col-6">
 						<h5 class="pt-2 text-white">
-							Shopping Cart
+							Order Summary
 						</h5>
 					</div>
 					<div class="col-6 text-end">
-						<a class="btn btn-outline-danger btn-sm">Back to Cart</a>
+						<a asp-action="Index" class="btn btn-outline-danger btn-sm">Back to Cart</a>
 					</div>
 				</div>
 			</div>
@@ -30,7 +32,8 @@
 									<label>Name</label>
 								</div>
 								<div class="col-9">
-									<input class="form-control" />
+									<input asp-for="OrderHeader.Name" class="form-control" />
+									<span asp-validation-for="OrderHeader.Name"></span>
 								</div>
 							</div>
 							<div class="row my-1">
@@ -38,7 +41,8 @@
 									<label>Phone</label>
 								</div>
 								<div class="col-9">
-									<input class="form-control" />
+									<input asp-for="@Model.OrderHeader.PhoneNumber" class="form-control" />
+									<span asp-validation-for="OrderHeader.PhoneNumber"></span>
 								</div>
 							</div>
 							<div class="row my-1">
@@ -46,7 +50,8 @@
 									<label>Street Address</label>
 								</div>
 								<div class="col-9">
-									<input class="form-control" />
+									<input asp-for="@Model.OrderHeader.StreetAddress" class="form-control" />
+									<span asp-validation-for="OrderHeader.StreetAddress"></span>
 								</div>
 							</div>
 							<div class="row my-1">
@@ -54,7 +59,8 @@
 									<label>City</label>
 								</div>
 								<div class="col-9">
-									<input class="form-control" />
+									<input asp-for="@Model.OrderHeader.City" class="form-control" />
+									<span asp-validation-for="OrderHeader.City"></span>
 								</div>
 							</div>
 							<div class="row my-1">
@@ -62,7 +68,8 @@
 									<label>State</label>
 								</div>
 								<div class="col-9">
-									<input class="form-control" />
+									<input asp-for="@Model.OrderHeader.State" class="form-control" />
+									<span asp-validation-for="OrderHeader.State"></span>
 								</div>
 							</div>
 							<div class="row my-1">
@@ -70,7 +77,8 @@
 									<label>Postal Code</label>
 								</div>
 								<div class="col-9">
-									<input class="form-control" />
+									<input asp-for="@Model.OrderHeader.PostalCode" class="form-control" />
+									<span asp-validation-for="OrderHeader.PostalCode"></span>
 								</div>
 							</div>
 						</div>
@@ -79,18 +87,21 @@
 								<span class="text-info">Order Summary:</span>
 							</h4>
 							<ul class="list-group mb-3">
-								<li class="list-group-item d-flex justify-content-between">
-									<div>
-										<h6 class="my-0">Title</h6>
-										<small class="text-muted">Quantity: Count</small>
-									</div>
-									<span class="text-muted">Price * Count </span>
-								</li>
 
-
+								@foreach (var item in Model.ShoppingCartList)
+								{
+									<li class="list-group-item d-flex justify-content-between">
+										<div>
+											<h6 class="my-0">@item.Product.Title</h6>
+											<small class="text-muted">Quantity: @item.Count</small>
+										</div>
+										<span class="text-muted"> @((item.Price * item.Count).ToString("c")) </span>
+									</li>
+								}
+								
 								<li class="list-group-item d-flex justify-content-between bg-light">
 									<small class="text-info">Total (USD)</small>
-									<strong class="text-info">$$</strong>
+									<strong class="text-info">@Model.OrderHeader.OrderTotal.ToString("c")</strong>
 								</li>
 							</ul>
 						</div>
@@ -102,7 +113,7 @@
 					<div class="col-12 col-md-8 pt-2">
 						<p style="color:maroon; font-size:14px;">
 							Estimate Arrival Date:
-
+							@DateTime.Now.AddDays(7).ToShortDateString() - @DateTime.Now.AddDays(14).ToShortDateString()
 						</p>
 					</div>
 					<div class="col-12 col-md-4">
